--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+* {
+	margin: 0;
+	padding: 0;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#content {
+	max-width: 1200px;
+	min-width: 800px;
+	width: 100%;
+	margin: 0 auto;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.line {
+	display: flex;
+	height: 40px;
+	padding: 10px 0 20px !important;
+	margin-top: 20px;
+	justify-content: space-between;
+	align-items: baseline;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.brand {
+	font-size: 14px;
 }
-
-.App-link {
-  color: #61dafb;
+.inputArea {
+	padding-top: 10px;
+	border-top: 1px solid #ddd;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.inputArea * {
+	margin-right: 10px;
+}
+.todoListArea {
+	padding-top: 20px;
+	margin-top: 20px;
+	border-top: 1px solid #ddd;
+}
+.todoList {
+	display: flex;
+	justify-content: flex-start;
+	flex-wrap: wrap;
+	align-items: start;
+}
+.ui.card {
+	margin: 0 10px 10px 0 !important;
 }
