--- a/src/App.css
+++ b/src/App.css
@@ -26,11 +26,11 @@
 .inputArea * {
 	margin-right: 10px;
 }
-.todoListArea {
+/* .todoListArea {
 	padding-top: 20px;
 	margin-top: 20px;
 	border-top: 1px solid #ddd;
-}
+} */
 .todoList {
 	display: flex;
 	justify-content: flex-start;
